# the-oracle

./: .gitignore  API_REFERENCE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  setup.cfg  simple_api.py  simple_seed.py
artifacts/: digest.md
backend/: Dockerfile  alembic.ini  app.py
backend/api/: __init__.py  deps.py
backend/api/routers/: __init__.py  forecasts.py  health.py  signals.py  topics.py
backend/core/: config.py  logging.py
backend/db/: base.py  session.py
backend/db/migrations/: env.py
backend/features/: __init__.py  build_feature_matrix.py  timeseries.py  topic_mapping.py
backend/forecasting/: __init__.py  baseline.py  prophet_forecaster.py  ranker.py
backend/ingestion/: __init__.py  arxiv_client.py  crunchbase_client.py  etl_runner.py  github_client.py  jobs_client.py  normalizers.py
backend/models/: features.py  forecast.py  signal_event.py  topic.py
backend/narratives/: __init__.py  generate.py
backend/schemas/: features.py  forecast.py  signal_event.py  topic.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_features.py  test_forecasting.py  test_ingestion.py  test_security.py
data/: topic_keywords.json
data/mock/: arxiv_mock.json  funding_mock.json  github_mock.json  jobs_mock.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: ExplainPanel.tsx  Layout.tsx  Leaderboard.tsx  Sparkline.tsx  TopicChart.tsx
frontend/src/pages/: Dashboard.tsx  TopicDetail.tsx
frontend/src/styles/: index.css
scripts/: dev_seed.py  export_digest.py  init_db.sql
